--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "url": "https://github.com/ditcoin/ditcoin-nodejs/issues"
   },
   "homepage": "https://github.com/ditcoin/ditcoin-nodejs#readme",
-  "dependencies": {},
+  "dependencies": {
+    "node-libcurl": "^1.3.2"
+  },
   "devDependencies": {
     "mocha": "^2.4.5",
     "should": "^8.3.0"
